# omni

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  Makefile  README.md  SECURITY.md  build.rs  install.sh  omni.rb  omni_config.json  package-lock.json  package.json  rust-toolchain.toml
.agents/workflows/: release.md
.github/: pull_request_template.md
.github/workflows/: ai-pr-describer.yml  ci.yml  release.yml
benches/: pipeline.rs
core/: build.zig  build.zig.zon
core/src/: compressor.zig  main.zig  monitor.zig  wasm.zig
docs/: CLAUDE.md  CLI_REFERENCE.md  DEVELOPMENT.md  FILTERS.md  HERMES_OMNI_INTEGRATION.md  HOW_TO_USE.md  LEARN.md  LOOP_ENGINEERING.md  MIGRATION.md  PERFOMANCE.md  ROADMAP.md  SESSION.md  TESTING.md  index.html
docs/autonomous-loops/: CLAUDE_LOOP.md  claude-code-loop.md  hermes-loop.md  mastra-integration.ts  shell-loop.sh
examples/autonomous-loops/: claude-code-loop.md
filters/: 00_example.toml  00_vitest.toml  black.toml  dotnet.toml  go_test.toml  kubectl.toml  mypy.toml  phpunit.toml  prisma.toml  vitest.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: collapse_fuzzer.rs
i18n/: README-ar.md  README-id.md  README-ja.md  README-ko.md  README-vi.md  README-zh.md
integrations/openclaw/: README.md  index.js  index.ts  openclaw.plugin.json  tsconfig.json
media/: demo.tape
media/demo/: cargo-test.txt
page/: index.html  style.css
plugins/openclaw/: openclaw.plugin.json
plugins/pi/: index.ts  package-lock.json  package.json
scratch/: debug_escape.rs
scripts/: bump_version.sh  install.ps1  install.sh  omni-deploy-edge.sh  omni-release.sh  update_homebrew_sha.sh
signals/domains/: build.toml  deploy.toml  test.toml
signals/tools/: 00_example.toml  aws.toml  (+21 more)
src/: index.js  index.ts  lib.rs  main.rs  paths.rs
tests/: README.md  broken_pipe.rs  cli_e2e_tests.sh  context_pressure_tests.rs  critical_scenarios.rs  exec_fail_passthrough.rs  format_safe.rs  handoff_isolation_tests.rs  hook_e2e.rs  performance_benchmarks.rs  savings_assertions.rs  security_tests.rs  security_validation_tests.rs  session_state_tests.rs  smoke_test.sh  toml_filter_integration.rs  unicode_safety.rs
(+190 files in other folders)
