[package]
name = "omni"
version = "0.6.2"
edition = "2024"
authors = ["Fajar Hidayat"]
description = "Semantic Signal Engine that cuts AI token consumption by up to 90%."
license = "MIT"
homepage = "https://omni.weekndlabs.com"
repository = "https://github.com/fajarhide/omni"
readme = "README.md"
keywords = ["cli", "ai", "mcp", "terminal", "agent", "ai-agent", "ai-coding", "ai-developer", "ai-tools", "ai-workflow", "ai-assistant"]
categories = ["command-line-utilities", "development-tools", "text-processing", "ai", "productivity", "os", "ai-productivity"]

[lib]
name = "omni"
path = "src/lib.rs"

[[bin]]
name = "omni"
path = "src/main.rs"

[dependencies]
# Core
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# MCP Server  
rmcp = { version = "1.4", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }

# Database (SQLite bundled — no system dep)
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Pattern matching
regex = "1"

# Security & hashing
sha2 = "0.10"
hex = "0.4"

# Time & analytics
chrono = "0.4"

# File system
dirs = "5"
glob = "0.3"
walkdir = "2"

# Output formatting
colored = "2"
indicatif = "0.17"   # progress bars for heavy operations

# Config (TOML DSL filters)
toml = "0.8"

# Terminal detection
is-terminal = "0.4"

# Misc
tempfile = "3"
ureq = { version = "2", features = ["json"] }
rust-embed = "8"
strsim = "0.11"
tiktoken-rs = "0.5"
schemars = "1.2.1"
unicode-width = "0.2.2"
unicode-segmentation = "1.13.3"
lru = "0.18.0"
dialoguer = "0.11"
console = "0.15"

[dev-dependencies]
insta = "1"  # snapshot testing
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "pipeline"
harness = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
